...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.lists.ReviewList">
        <!--progress bar for loading indicator-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="91dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <!--recycler view to display our data-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRVCourses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="59dp"
            android:visibility="gone">

...
